# nft-order/api/src/main/kotlin/com/rarible/protocol/nftorder/api/service/ActivityApiService.kt
@@ -20,14 +20,22 @@ class ActivityApiService(
 
     private companion object {
         const val DEFAULT_SIZE = 50
-        val ACTIVITY_COMPARATOR = compareByDescending(ActivityDto::date)
+        private val ACTIVITY_COMPARATOR = compareByDescending(ActivityDto::date)
             .then(compareByDescending(ActivityDto::id))
+
+        fun getComparator(sort: String?) =
+            if (sort == "EARLIEST_FIRST") {
+                ACTIVITY_COMPARATOR.reversed()
+            } else {
+                ACTIVITY_COMPARATOR
+            }
     }
 
     suspend fun getActivities(
         filter: ActivityFilterDto,
         continuation: String?,
-        size: Int?
+        size: Int?,
+        sort: String?
     ): ActivitiesDto = coroutineScope {
         logger.debug(
             "Searching for Activities with params: filter=[{}], continuation={}, size={}",
@@ -35,15 +43,15 @@ class ActivityApiService(
         )
         val requestSize = min(size ?: DEFAULT_SIZE, DEFAULT_SIZE)
 
-        val nftResults = async { activityService.getNftActivities(filter, continuation, requestSize) }
-        val orderResults = async { activityService.getOrderActivities(filter, continuation, requestSize) }
+        val nftResults = async { activityService.getNftActivities(filter, continuation, requestSize, sort) }
+        val orderResults = async { activityService.getOrderActivities(filter, continuation, requestSize, sort) }
 
         logger.debug(
             "Found Activities: {} from NFT-Indexer and {} from Order-Indexer",
             nftResults.await().items.size, orderResults.await().items.size
         )
         val activities = (nftResults.await().items + orderResults.await().items)
-            .sortedWith(ACTIVITY_COMPARATOR)
+            .sortedWith(getComparator(sort))
             .take(requestSize)
 
         val hasMore = (activities.isNotEmpty() && activities.size >= requestSize)
