# order/api/src/main/kotlin/com/rarible/protocol/order/api/controller/OrderActivityController.kt
@@ -8,6 +8,7 @@ import com.rarible.protocol.order.api.converter.ActivityVersionFilterConverter
 import com.rarible.protocol.order.api.misc.limit
 import com.rarible.protocol.order.core.converters.dto.OrderActivityConverter
 import com.rarible.protocol.order.api.service.activity.OrderActivityService
+import com.rarible.protocol.order.core.repository.sort.OrderActivitySort
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
@@ -22,15 +23,17 @@ class OrderActivityController(
     override suspend fun getOrderActivities(
         filter: OrderActivityFilterDto,
         continuation: String?,
-        size: Int?
+        size: Int?,
+        sort: String?
     ): ResponseEntity<OrderActivitiesDto> {
         val requestSize = size.limit()
         val continuationDto = ContinuationMapper.toActivityContinuationDto(continuation)
-        val historyFilters = historyFilterConverter.convert(filter, continuationDto)
-        val versionFilters = versionFilterConverter.convert(filter, continuationDto)
+        val activitySort = OrderActivitySort.fromString(sort)
+        val historyFilters = historyFilterConverter.convert(filter, activitySort, continuationDto)
+        val versionFilters = versionFilterConverter.convert(filter, activitySort, continuationDto)
 
         val result = orderActivityService
-            .search(historyFilters, versionFilters, requestSize)
+            .search(historyFilters, versionFilters, activitySort, requestSize)
             .mapNotNull { orderActivityConverter.convert(it) }
 
         val nextContinuation = if (result.isEmpty() || result.size < requestSize) {
