# order/api/src/main/kotlin/com/rarible/protocol/order/api/service/activity/OrderActivityService.kt
@@ -5,6 +5,7 @@ import com.rarible.protocol.order.core.repository.exchange.ActivityExchangeHisto
 import com.rarible.protocol.order.core.repository.exchange.ExchangeHistoryRepository
 import com.rarible.protocol.order.core.repository.order.ActivityOrderVersionFilter
 import com.rarible.protocol.order.core.repository.order.OrderVersionRepository
+import com.rarible.protocol.order.core.repository.sort.OrderActivitySort
 import kotlinx.coroutines.reactive.awaitFirst
 import org.springframework.stereotype.Component
 import reactor.core.publisher.Flux
@@ -17,6 +18,7 @@ class OrderActivityService(
     suspend fun search(
         historyFilters: List<ActivityExchangeHistoryFilter>,
         versionFilters: List<ActivityOrderVersionFilter>,
+        sort: OrderActivitySort,
         size: Int
     ): List<ActivityResult> {
         val histories = historyFilters.map { filter ->
@@ -30,7 +32,7 @@ class OrderActivityService(
                 .map { ActivityResult.Version(it) }
         }
         return Flux.mergeOrdered<ActivityResult>(
-            ActivityResult.comparator(),
+            ActivityResult.comparator(sort),
             *(histories + versions).toTypedArray()
         ).take(size.toLong()).collectList().awaitFirst()
     }
